--- a/app/views/menu.html.twig
+++ b/app/views/menu.html.twig
@@ -32,7 +32,7 @@
         <div id='search'>
             <form method='post' action='/search'>
                 <p>Enter the answer you would like to search for.</p>
-                <p><label for="answer">Answer: </label><input id="answer" title="Enter Answer"></p>
+                <p><label for="answer">Answer: </label><input id="answer" name="answer" title="Enter Answer" placeholder="Enter Answer to Search"></p>
                 <input type='submit' value='Search' title="Search"/>
             </form>
         </div>
