--- a/app/views/results.html.twig
+++ b/app/views/results.html.twig
@@ -14,27 +14,26 @@
         </ul>
         <div id='results'>
             <form method='post' action='/replace'>
-                <table>
-                    <tr title='selectall'>
-                        <td style='float:left'>
-                            <input type='checkbox' id='selectall' />
-                            <label for='selectall'>Select All</label>
-                        </td>
-                    </tr>
+                <fieldset>
+                    <legend>Matched Records for <big><big style='color:#EB006B'>{{ answer }}</big></big></legend>
+                    <div id="dialog1" title="Tip">
+                        <p>Click on any records you want to unselect from changing.</p>
+                    </div>
+                    <a id="opener1" class="ui-state-default ui-corner-all tip" title="Change Record Help" style="width:19px;height:19px;padding:0px;margin:0px;font-size:1pt;">
+                        <span class="ui-icon ui-icon-help"></span>
+                    </a>
                 {% set x = 0 %}
                 {% for record in records %}
                     {% set x = x + 1 %}
                     {% set check = "check" ~ x %}
-                    <tr title='{{ record }}'>
-                        <td style='float:left'>
-                            <input type='checkbox' class='checkbox1' id='{{ check }}' name='change_record[]' value='{{ record }}'/>
-                            <label for='{{ check }}'>
-                                {{ record }}
-                            </label>
-                        </td>
-                    </tr>
+                    <p title='{{ record }}'>
+                        <input type='checkbox' class='checkbox' id='{{ check }}' name='change_record[]' value='{{ record }}' checked/>
+                        <label for='{{ check }}'>
+                            {{ record }}
+                        </label>
+                    </p>
                 {% endfor %}
-                </table>
+                </fieldset>
             </form>
         </div>
         <div id='search'>
@@ -54,8 +53,19 @@
                 $( document ).tooltip();
                 $( "input[type=checkbox], a, button" ).button();
                 $( "input[type=submit], a, .jbutton" ).button();
-                $( "#selectall" ).change(function () {
-                    $("input:checkbox").prop('checked', $(this).prop("checked"));
+                $( "#dialog1" ).dialog({
+                    autoOpen: false,
+                    show: {
+                        effect: "blind",
+                        duration: 1000
+                    },
+                    hide: {
+                        effect: "fold",
+                        duration: 1000
+                    }
+                });
+                $( "#opener1" ).click(function() {
+                    $( "#dialog1").dialog( "open" );
                 });
             });
             $(document).ready(function() {
