--- a/app/views/results.html.twig
+++ b/app/views/results.html.twig
@@ -35,8 +35,8 @@
                 {% endfor %}
                 <p title='Replacement Answer'>
                     <label for='new_answer'>
-                        <input type='text' maxlength='253' name='new_answer' value='' placeholder='Enter replacement answer for {{ answer }}'/>
-                        
+                        <input type='text' maxlength='253' name='new_answer' value='' placeholder='Enter replacement answer for {{ answer }}' style='max-width:320px'/>
+                        <input type='submit' value='Replace'>
                     </label>
                 </p>
                 </fieldset>
@@ -44,9 +44,11 @@
         </div>
         <div id='search'>
             <form method='post' action='/search'>
-                <p>Enter the answer you would like to search for.</p>
-                <p><label for="answer">Answer: </label><input id="answer" name="answer" title="Enter Answer" placeholder="Enter Answer to Search"></p>
-                <input type='submit' value='Search' title="Search"/>
+                <fieldset>
+                    <legend>Search for an answer</legend>
+                    <p><label for="answer"></label><input type='text' maxlength='253' id="answer" name="answer" title="Enter Answer" placeholder="Enter Answer to Search" style='max-width:320px'/></p>
+                    <input type='submit' value='Search' title="Search"/>
+                </fieldset>
             </form>
         </div>
     </div>
