mouse tracking (one missed)

--- a/app/views/home.html.twig
+++ b/app/views/home.html.twig
@@ -25,6 +25,9 @@
         $(function() {
             $( "input[type=submit], a, .jbutton" ).button();
         });
+        $( document ).tooltip({
+            track: true
+        });        
         $(document).ready(function() {
             setTimeout(function() {
                 $( ".notify" ).fadeOut(1000, function () {
