less ugly background

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,7 +76,7 @@ body {
     margin: 20px;
     margin-top: 20px;
     background: #000;
-    background-image: url(../img/ns1small.png);
+    background-image: url(../img/dark_embroidery.png);
     background-repeat: repeat;
     /*transform-origin: 50% 100%;*/
     /*transform: rotateX(25deg);*/
