disabled replace button when no records are selected

--- a/app/views/results.html.twig
+++ b/app/views/results.html.twig
@@ -17,7 +17,7 @@
                 <fieldset>
                     <legend>Matched Records for <big><big style='color:#EB006B'>{{ answer }}</big></big></legend>
                     <div id="dialog1" title="Tip">
-                        <p>Click on any records you want to unselect, and prevent from being changed.  Note: you cannot change record types (e.g. A record to CNAME) when changing answers.</p>
+                        <p>Click on any records you want to unselect to prevent them from being changed.  At least one record must remain selected to update answers.  Note: you cannot change record types (e.g. A record to CNAME) when changing answers.</p>
                     </div>
                     <a id="opener1" class="ui-state-default ui-corner-all tip" title="Change Record Help" style="width:19px;height:19px;padding:0px;margin:0px;font-size:1pt;">
                         <span class="ui-icon ui-icon-help"></span>
@@ -54,6 +54,11 @@
     </div>
     {% block scripts %}
         <script type='text/javascript'>
+            var checkboxes = $( "input[type='checkbox']" ),
+                submitButt = $( "input[type='submit']" );
+            checkboxes.click(function() {
+                submitButt.attr("disabled", !checkboxes.is(":checked"));
+            });
             $(function() {
                 $( "#tabs" ).tabs({
                     collapsible: true
