--- a/app/views/results.html.twig
+++ b/app/views/results.html.twig
@@ -15,7 +15,7 @@
         <div id='results'>
             <form method='post' action='/replace'>
                 <fieldset>
-                    <legend>Matched Records for <big><big style='color:#EB006B'>{{ answer }}</big></big></legend>
+                    <legend>{{ status }} <big><big style='color:#EB006B'>{{ answer }}</big></big></legend>
                     <div id="dialog1" title="Tip">
                         <p>Click on any records you want to unselect to prevent them from being changed.  At least one record must remain selected to update answers.  Note: you cannot change record types (e.g. A record to CNAME) when changing answers.</p>
                     </div>
