--- a/app/views/base.html.twig
+++ b/app/views/base.html.twig
@@ -18,9 +18,9 @@
 
             <link rel='shortcut icon' sizes='192x192' href='/img/applogo.png'>
 
-            <!--<link rel='apple-touch-icon' sizes='192x192' href='/img/applogo.png'>
+            <!--<link rel='apple-touch-icon' sizes='192x192' href='/img/applogo.png'>-->
 
-            <link rel='icon' href='/img/favicon.ico' type='image/x-icon'>-->
+            <link rel='icon' href='/img/favicon.ico' type='image/x-icon'>
 
             <link rel='stylesheet' href='/css/main.css' type='text/css' />
 
