answer matched list on placeholder in results twig (will be sub array of record matched)

--- a/app/views/results.html.twig
+++ b/app/views/results.html.twig
@@ -31,6 +31,7 @@
                         <label for='{{ check }}'>
                             {{ record }}
                         </label>
+                        <span>Matched - 1.2.3.4</span>
                     </p>
                 {% endfor %}
                 {% if not hide %}
