--- a/app/views/results.html.twig
+++ b/app/views/results.html.twig
@@ -26,18 +26,18 @@
                 {% for record in records %}
                     {% set x = x + 1 %}
                     {% set check = "check" ~ x %}
-                    <p title='{{ record }}'>
-                        <input type='checkbox' class='checkbox' id='{{ check }}' name='change_record[]' value='{{ record }}' checked/>
+                    <p title='{{ record['record'] }}'>
+                        <input type='checkbox' class='checkbox' id='{{ check }}' name='change_record[]' value='{{ record['record'] }}' checked/>
                         <label for='{{ check }}'>
-                            {{ record }}
+                            {{ record['record'] }}
                         </label>
-                        <span>Matched - 1.2.3.4</span>
+                        <span style='font-weight:bold;color:yellowgreen;alignment-adjust'>Matched - {% for ip in record['answ'] %} &nbsp; {{ ip }} &nbsp; {% endfor %}</span>
                     </p>
                 {% endfor %}
                 {% if not hide %}
                 <p title='Replacement Answer'>
                     <label for='new_answer'>
-                        <input type='text' maxlength='253' name='new_answer' value='' placeholder='Enter replacement answer for {{ answer }}' style='max-width:320px'/>
+                        <input type='text' maxlength='253' name='new_answer' value='' placeholder='Enter replacement answer for answers containing {{ answer }}' style='max-width:320px'/>
                         <input type='submit' value='Replace'>
                     </label>
                 </p>
