CSS changes and removed unneeded testing array

--- a/app/views/menu.html.twig
+++ b/app/views/menu.html.twig
@@ -25,7 +25,7 @@
         <script type='text/javascript'>
             $(function() {
                 $( "#tabs" ).tabs({
-                    collapsible: true
+                    event: "mouseover"
                 });
                 $( document ).tooltip({
                     track: true
