--- a/app/views/base.html.twig
+++ b/app/views/base.html.twig
@@ -24,15 +24,15 @@
 
             <link rel='stylesheet' href='/css/main.css' type='text/css' />
 
-            <link rel='stylesheet' href='/css/jquery-ui.css' type='text/css' />
+            <link rel='stylesheet' href='/css/jquery-ui.min.css' type='text/css' />
 
-            <link rel='stylesheet' href='/css/jquery-ui.structure.css' type='text/css' />
+            <link rel='stylesheet' href='/css/jquery-ui.structure.min.css' type='text/css' />
 
-            <link rel='stylesheet' href='/css/jquery-ui.theme.css' type='text/css' />
+            <link rel='stylesheet' href='/css/jquery-ui.theme.min.css' type='text/css' />
 
             <script src='/js/jquery.js'></script>
 
-            <script src='/js/jquery-ui.js'></script>
+            <script src='/js/jquery-ui.min.js'></script>
 
     {% endblock %}
         </head>
