--- a/app/views/results.html.twig
+++ b/app/views/results.html.twig
@@ -66,7 +66,7 @@
             });
             $(function() {
                 $( "#tabs" ).tabs({
-                    collapsible: true
+                    event: "mouseover"
                 });
                 $( document ).tooltip({
                     track: true
