removed tab change on hover

--- a/app/views/menu.html.twig
+++ b/app/views/menu.html.twig
@@ -24,9 +24,7 @@
     {% block scripts %}
         <script type='text/javascript'>
             $(function() {
-                $( "#tabs" ).tabs({
-                    event: "mouseover"
-                });
+                $( "#tabs" ).tabs();
                 $( document ).tooltip({
                     track: true
                 });
