--- a/app/views/results.html.twig
+++ b/app/views/results.html.twig
@@ -65,9 +65,7 @@
                 submitButt.attr("disabled", !checkboxes.is(":checked"));
             });
             $(function() {
-                $( "#tabs" ).tabs({
-                    event: "mouseover"
-                });
+                $( "#tabs" ).tabs();
                 $( document ).tooltip({
                     track: true
                 });
