added delay and slide in to tool tips

--- a/app/views/home.html.twig
+++ b/app/views/home.html.twig
@@ -26,6 +26,10 @@
             $( "input[type=submit], a, .jbutton" ).button();
         });
         $( document ).tooltip({
+            show: {
+                effect: "slideDown",
+                delay: 1000
+            },
             track: true
         });        
         $(document).ready(function() {
