--- a/app/views/results.html.twig
+++ b/app/views/results.html.twig
@@ -67,6 +67,10 @@
             $(function() {
                 $( "#tabs" ).tabs();
                 $( document ).tooltip({
+                    show: {
+                        effect: "slideDown",
+                        delay: 1000
+                    },
                     track: true
                 });
                 $( "input[type=checkbox], a, button" ).button();
