search orphaned PTR form

--- a/app/views/menu.html.twig
+++ b/app/views/menu.html.twig
@@ -24,9 +24,8 @@
         <div id='clean'>
             <form method='post' action='/rndsSearch'>
                 <fieldset>
-                    <legend>Search for an answer</legend>
-                    <p><label for="answer"></label><input type='text' maxlength='253' id="answer" name="answer" title="Enter Answer" placeholder="Enter Answer to Search" style='max-width:320px'/></p>
-                    <input type='submit' value='Search' title="Search"/>
+                    <legend>Find orphaned PTR records</legend>
+                    <input type='submit' value='Search' title="Search"style='margin-top:3px'/>
                 </fieldset>
             </form>
         </div>
