rdns_search routing logic

--- a/app/views/orphans.html.twig
+++ b/app/views/orphans.html.twig
@@ -38,8 +38,7 @@
                 {% if not hide %}
                 <p title='Replacement Answer'>
                     <label for='new_answer'>
-                        <input type='text' maxlength='253' name='new_answer' value='' placeholder='Enter replacement answer for answers containing {{ answer }}' style='max-width:320px'/>
-                        <input type='submit' value='Replace'>
+                        <input type='submit' value='Delete'>
                     </label>
                 </p>
                 {% endif %}
