form action delPtr updated

--- a/app/views/orphans.html.twig
+++ b/app/views/orphans.html.twig
@@ -12,7 +12,7 @@
             <li><a href='#results' title='Match Results'>Match Results</a></li>
         </ul>
         <div id='results'>
-            <form method='post' action='/replace'>
+            <form method='post' action='/delPtr'>
                 <fieldset>
                     <legend>{{ status }} <big><big style='color:#EB006B'>{{ answer }}</big></big></legend>
                     <div id="dialog1" title="Tip">
